fix(TimePicker2): should has focus style when visible, close #4657 (#4738)
* fix(TimePicker2): TimePicker2 focusing issue  noborder, close #4657

* fix(TimePicker2): Update test TimePicker2 focusing issue noborder, close #4657

---------

--- a/components/time-picker2/main.scss
+++ b/components/time-picker2/main.scss
@@ -45,7 +45,8 @@
         border: $input-border-width solid $input-border-color;
         vertical-align: middle;
         width: inherit;
-
+        background-color: $input-bg-color;
+        
         #{$input-prefix} {
             border: none;
             width: 100%;
